<resources>
    <string name="accounts">Accounts</string>
    <string name="charts">Charts</string>
    <string name="settings">Settings</string>
    <string name="add_account">Add account</string>
    <string name="edit_account">Edit account</string>
    <string name="delete_account">Delete account</string>
    <string name="all">All</string>
    <string name="account_name">Account name</string>
    <string name="discard_changes">Discard changes</string>
    <string name="color">Color</string>
    <string name="icon">Icon</string>
    <string name="initial_amount">Initial amount</string>
    <string name="category">Category</string>
    <string name="detail">Detail</string>
    <string name="add_entry">Add entry</string>
    <string name="edit_entry">Edit entry</string>
    <string name="delete_entry">Delete entry</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="edit_detail">Edit detail</string>

    <string name="num_pad_1" translatable="false">1</string>
    <string name="num_pad_2" translatable="false">2</string>
    <string name="num_pad_3" translatable="false">3</string>
    <string name="num_pad_dot" translatable="false">.</string>
    <string name="num_pad_4" translatable="false">4</string>
    <string name="num_pad_5" translatable="false">5</string>
    <string name="num_pad_6" translatable="false">6</string>
    <string name="num_pad_0" translatable="false">0</string>
    <string name="num_pad_7" translatable="false">7</string>
    <string name="num_pad_8" translatable="false">8</string>
    <string name="num_pad_9" translatable="false">9</string>
    <string name="num_pad_del" translatable="false">DEL</string>

    <string name="app_name">Cent Budget</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_account">Edit account</string>

    <!--Content description -->
    <string name="cd_entry_icon">Entry icon</string>
    <string name="title_activity_edit_entry">Add or edit entry</string>
</resources>
