<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:clickable="true"
    android:background="?attr/selectableItemBackground">
    <ImageView
        android:id="@+id/entry_icon_image_view"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_centerVertical="true"
        android:background="#cfcfcf"
        android:contentDescription="@string/cd_entry_icon"/>
    <TextView
        android:id="@+id/entry_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        android:textSize="16sp"
        android:textColor="@color/text_black_87"/>
    <TextView
        android:id="@+id/entry_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/detail"
        android:textSize="14sp"
        android:textColor="@color/text_black_54"/>
    <TextView
        android:id="@+id/entry_category_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_toLeftOf="@id/entry_value_text_view"
        android:layout_toStartOf="@id/entry_value_text_view"
        android:text="@string/category"
        android:textSize="16sp"
        android:textColor="@color/text_black_87"/>
    <TextView
        android:id="@+id/entry_detail_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_toLeftOf="@id/entry_date_text_view"
        android:layout_toStartOf="@id/entry_date_text_view"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/detail"
        android:textSize="14sp"
        android:textColor="@color/text_black_54"/>
</RelativeLayout>